<resources>
    <string name="app_name">Zhongying</string>
    <string name="title_home">首页</string>
    <string name="title_shop">商城</string>
    <string name="title_ticketing">票务</string>
    <string name="title_live">直播</string>
    <string name="title_own">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>