<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@mipmap/icon_shop"
        android:title="@string/title_shop" />
    <item
        android:id="@+id/navigation_ticketing"
        android:icon="@mipmap/icon_ticketing"
        android:title="@string/title_ticketing" />
    <item
        android:id="@+id/navigation_live"
        android:icon="@mipmap/icon_live"
        android:title="@string/title_live" />
    <item
        android:id="@+id/navigation_own"
        android:icon="@mipmap/icon_own"
        android:title="@string/title_own" />

</menu>