<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.app.zhongying.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.app.zhongying.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_ticketing"
        android:name="com.app.zhongying.ui.ticketing.TicketingFragment"
        android:label="@string/title_ticketing"
        tools:layout="@layout/fragment_ticketing" />

    <fragment
        android:id="@+id/navigation_live"
        android:name="com.app.zhongying.ui.live.LiveFragment"
        android:label="@string/title_live"
        tools:layout="@layout/fragment_live" />

    <fragment
        android:id="@+id/navigation_own"
        android:name="com.app.zhongying.ui.own.OwnFragment"
        android:label="@string/title_own"
        tools:layout="@layout/fragment_own" />
</navigation>